@@ -18,6 +18,8 @@ Use '-h' for parameter help.
 import sys
 import textwrap
 import khmer
+from khmer import khmer_args
+from khmer import khmer_args
 from khmer.khmer_args import build_counting_args, report_on_config, info
 from khmer.kfile import check_input_files, check_space
 from khmer.kfile import check_space_for_hashtable
@@ -74,15 +76,15 @@ def main():
         check_input_files(name, False)
 
     check_space(args.input_sequence_filename, False)
-    check_space_for_hashtable(args.n_tables * args.min_tablesize, False)
+    check_space_for_hashtable(args, 'countgraph', False)
 
     print 'Saving k-mer counting table to %s' % base
     print 'Loading sequences from %s' % repr(filenames)
     if args.output:
         print 'Outputting sequences to', args.output
 
-    print 'making k-mer counting table'
-    htable = khmer.new_counting_hash(args.ksize, args.min_tablesize)
+    print 'making countgraph'
+    htable = khmer_args.create_countgraph(args)
     htable.set_use_bigcount(args.bigcount)
 
     total_coverage = 0.
@@ -130,7 +132,7 @@ def main():
     info_fp.write('through end: %s\n' % filenames[-1])
 
     # Change 0.2 only if you really grok it.  HINT: You don't.
-    fp_rate = khmer.calc_expected_collisions(htable, args.force, max_false_pos=.2)
+    fp_rate = khmer.calc_expected_collisions(htable, False, max_false_pos=.2)
     print 'fp rate estimated to be %1.3f' % fp_rate
     print >> info_fp, 'fp rate estimated to be %1.3f' % fp_rate
 
