@@ -18,6 +18,7 @@ import os
 import khmer
 import textwrap
 from itertools import izip
+from khmer import khmer_args
 from khmer.khmer_args import (build_counting_args, add_loadhash_args,
                               report_on_config, info)
 import argparse
@@ -185,7 +186,7 @@ def main():  # pylint: disable=too-many-branches,too-many-statements
     check_valid_file_exists(args.input_filenames)
     check_space(args.input_filenames, False)
     if args.savetable:
-        check_space_for_hashtable(args.n_tables * args.min_tablesize, False)
+        check_space_for_hashtable(args, 'countgraph', False)
 
     # list to save error files along with throwing exceptions
     if args.force:
@@ -195,9 +196,8 @@ def main():  # pylint: disable=too-many-branches,too-many-statements
         print 'loading k-mer counting table from', args.loadtable
         htable = khmer.load_counting_hash(args.loadtable)
     else:
-        print 'making k-mer counting table'
-        htable = khmer.new_counting_hash(args.ksize, args.min_tablesize,
-                                         args.n_tables)
+        print 'making countgraph'
+        htable = khmer_args.create_countgraph(args)
 
     total = 0
     discarded = 0
