@@ -10,7 +10,8 @@
    * tests/test_script_arguments.py: updated tests.
    * scripts/{abundance-dist-single.py,count-overlap.py,do-partition.py,
    filter-abund-single.py,find-knots.py,load-into-counting.py,
-   make-initial-stoptags.py,normalize-by-median.py,trim-low-abund.py}: replaced
+   make-initial-stoptags.py,normalize-by-median.py,trim-low-abund.py,
+   sandbox/{collect-reads.py,saturate-by-median.py}: replaced
    counting hash/hashbits creation with new khmer_args create* functions.
    * oxli/build_graph.py,sandbox/{sweep-files.py,sweep-reads.py},
    scripts/{count-overlap.py,do-partition.py,},khmer/khmer_args.py:
